# powerball

./: .gitignore  LICENSE  Makefile.in  README.md  config.h.in  configure  configure.ac
include/: list.h  misc-macros.h
res/: example.txt
src/: Makefile.am  Makefile.in  list.c  main.c
